<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.mohdmustaqeem3040.allvideostopdfconverter.Fragment.HomeFragment">

    <!-- Responsive CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:elevation="7dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texthome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/padding_medium"
            android:text="@string/all_videos_nto_pdf_n_converter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!-- LinearLayout for main content -->
    <LinearLayout
        android:id="@+id/mainelement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <!-- TextView -->
        <TextView
            android:id="@+id/tester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatically_selected_time_interval_is_10_seconds"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <!-- Spinner -->
        <Spinner
            android:id="@+id/timeIntervalSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:backgroundTint="@color/white" />

        <!-- Cards for selection -->
        <LinearLayout
            android:id="@+id/layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_small">

            <!-- Single Video Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/padding_small">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:background="@drawable/single" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_nvideo"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Multiple Videos Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/multiple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/padding_small">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/image_height"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:background="@drawable/multiple" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_nmultiple_videos"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressloading"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- AdView -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:adSize="MEDIUM_RECTANGLE"
        app:adUnitId="ca-app-pub-5242787336207828/2255634846" />
</androidx.constraintlayout.widget.ConstraintLayout>
